force-app/main/default/objects/Worksheet__c/fields/Rate_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Rate_Picklist__c</fullName>
    <label>Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>145</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>