force-app/main/default/objects/Worksheet__c/fields/RateCurrency__c.field-meta.xml
<CustomField>
    <fullName>RateCurrency__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>