force-app/main/default/objects/Worksheet__c/fields/Rental_Period_Qty__c.field-meta.xml
<CustomField>
    <fullName>Rental_Period_Qty__c</fullName>
    <label>Rental Period Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>