force-app/main/default/objects/Worksheet__c/fields/Rental_Period_Units__c.field-meta.xml
<CustomField>
    <fullName>Rental_Period_Units__c</fullName>
    <label>Rental Period Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>