force-app/main/default/objects/Worksheet__c/fields/Return_Day2__c.field-meta.xml
<CustomField>
    <fullName>Return_Day2__c</fullName>
    <label>Return Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>