force-app/main/default/objects/Worksheet__c/fields/Return_DayPicklist2__c.field-meta.xml
<CustomField>
    <fullName>Return_DayPicklist2__c</fullName>
    <label>Return Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.25</fullName>
            </value>
            <value>
                <fullName>0.50</fullName>
            </value>
            <value>
                <fullName>0.75</fullName>
            </value>
            <value>
                <fullName>1.00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>