force-app/main/default/objects/Worksheet__c/fields/Return_Time__c.field-meta.xml
<CustomField>
    <fullName>Return_Time__c</fullName>
    <label>Return Time</label>
    <type>Time</type>
</CustomField>