force-app/main/default/objects/Worksheet__c/fields/ReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnDate__c</fullName>
    <description>PacPoint-AC120919 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>MM/DD/YY</inlineHelpText>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>