force-app/main/default/objects/Worksheet__c/fields/ReturnDateOnly__c.field-meta.xml
<CustomField>
    <fullName>ReturnDateOnly__c</fullName>
    <description>PacPoint - JF 8011 - Setup the DocuSign Template for Worksheet B Template</description>
    <formula>DateValue(ReturnDateTime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Date Only</label>
    <type>Date</type>
</CustomField>