force-app/main/default/objects/Worksheet__c/fields/ReturnDateTime__c.field-meta.xml
<CustomField>
    <fullName>ReturnDateTime__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Return Date/Time</label>
    <type>DateTime</type>
</CustomField>