force-app/main/default/objects/Worksheet__c/fields/ReturnDay__c.field-meta.xml
<CustomField>
    <fullName>ReturnDay__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Return Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>