force-app/main/default/objects/Worksheet__c/fields/ReturnTimeOnly__c.field-meta.xml
<CustomField>
    <fullName>ReturnTimeOnly__c</fullName>
    <description>PacPoint - JF 8011 - Setup the DocuSign Template for Worksheet B Template</description>
    <formula>CASE(RIGHT(LEFT(TEXT(ReturnDateTime__c-0.4166666666667), 13), 2), &quot;13&quot;, &quot;01&quot;, &quot;14&quot;, &quot;02&quot;, &quot;15&quot;, &quot;03&quot;, &quot;16&quot;, &quot;04&quot;, &quot;17&quot;, &quot;05&quot;, &quot;18&quot;, &quot;06&quot;,
&quot;19&quot;, &quot;07&quot;, &quot;20&quot;, &quot;08&quot;, &quot;21&quot;, &quot;09&quot;, &quot;22&quot;, &quot;10&quot;, &quot;23&quot;, &quot;11&quot;, &quot;00&quot;, &quot;12&quot;, RIGHT(LEFT(TEXT(ReturnDateTime__c-0.4166666666667), 13), 2)) + &quot;:&quot; +
RIGHT(LEFT(TEXT(ReturnDateTime__c-0.4166666666667), 16), 2) + &quot; &quot; +
IF(VALUE(RIGHT(LEFT(TEXT(ReturnDateTime__c-0.4166666666667), 13), 2)) &lt; 12, &quot;AM&quot;, &quot;PM&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Time Only</label>
    <type>Text</type>
</CustomField>