force-app/main/default/objects/Worksheet__c/fields/Rtn_Date__c.field-meta.xml
<CustomField>
    <fullName>Rtn_Date__c</fullName>
    <label>Rtn. Date</label>
    <type>Date</type>
</CustomField>