force-app/main/default/objects/Worksheet__c/fields/Same_Day_Amount__c.field-meta.xml
<CustomField>
    <fullName>Same_Day_Amount__c</fullName>
    <inlineHelpText>Per Day</inlineHelpText>
    <label>Same Day Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>