force-app/main/default/objects/Worksheet__c/fields/Same_Day_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Same_Day_Amount_Formula__c</fullName>
    <formula>Same_Day_Amount__c *  Days8__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Same Day Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>