force-app/main/default/objects/Worksheet__c/fields/SelectedItinerary1__c.field-meta.xml
<CustomField>
    <fullName>SelectedItinerary1__c</fullName>
    <description>PacPoint-AC021221 - Created for Travel Approval - Creating this field for worksheets with Selected Quote = Quote 1</description>
    <formula>IF(
ISPICKVAL (SelectedQuote__c, &quot;Itinerary 1&quot;),&quot;x&quot;,&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selected Itinerary 1</label>
    <type>Text</type>
</CustomField>