force-app/main/default/objects/Worksheet__c/fields/SelectedItinerary2__c.field-meta.xml
<CustomField>
    <fullName>SelectedItinerary2__c</fullName>
    <description>PacPoint-AC021221 - Created for Travel Approval - Creating this field for worksheets with Selected Quote = Quote 2</description>
    <formula>IF(ISPICKVAL(SelectedQuote__c, &quot;Itinerary 2&quot;),&quot;x&quot;,&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selected Itinerary 2</label>
    <type>Text</type>
</CustomField>