force-app/main/default/objects/Worksheet__c/fields/SelectedItinerary3__c.field-meta.xml
<CustomField>
    <fullName>SelectedItinerary3__c</fullName>
    <description>PacPoint-AC021221 - Created for Travel Approval - Creating this field for worksheets with Selected Quote = Quote 3</description>
    <formula>IF(ISPICKVAL(SelectedQuote__c, &quot;Itinerary 3&quot;),&quot;x&quot;,&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selected Itinerary 3</label>
    <type>Text</type>
</CustomField>