force-app/main/default/objects/Worksheet__c/fields/SelectedQuote__c.field-meta.xml
<CustomField>
    <fullName>SelectedQuote__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Selected Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Itinerary 1</fullName>
            </value>
            <value>
                <fullName>Itinerary 2</fullName>
            </value>
            <value>
                <fullName>Itinerary 3</fullName>
            </value>
            <value>
                <fullName>Quote 1</fullName>
            </value>
            <value>
                <fullName>Quote 2</fullName>
            </value>
            <value>
                <fullName>Quote 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>