force-app/main/default/objects/Worksheet__c/fields/SelectedQuoteWorksheetC__c.field-meta.xml
<CustomField>
    <fullName>SelectedQuoteWorksheetC__c</fullName>
    <label>Selected Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote 1</fullName>
            </value>
            <value>
                <fullName>Quote 2</fullName>
            </value>
            <value>
                <fullName>Quote 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>