force-app/main/default/objects/Worksheet__c/fields/Time2__c.field-meta.xml
<CustomField>
    <fullName>Time2__c</fullName>
    <label>Time</label>
    <type>Time</type>
</CustomField>