force-app/main/default/objects/Worksheet__c/fields/TimeFormula2__c.field-meta.xml
<CustomField>
    <fullName>TimeFormula2__c</fullName>
    <formula>IF(
ISBLANK(Time2__c),
&quot;&quot;,
IF(
MOD(HOUR(Time2__c), 12) = 0,
&quot;12&quot;,
TEXT(MOD(HOUR(Time2__c), 12))
) &amp;
&quot;:&quot; &amp;
IF(
MINUTE(Time2__c) &lt; 10,
&quot;0&quot; &amp; TEXT(MINUTE(Time2__c)),
TEXT(MINUTE(Time2__c))
) &amp;
IF(
HOUR(Time2__c) &lt; 12,
&quot; AM&quot;,
&quot; PM&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TimeFormula2</label>
    <type>Text</type>
</CustomField>