force-app/main/default/objects/Worksheet__c/fields/TimeFormula__c.field-meta.xml
<CustomField>
    <fullName>TimeFormula__c</fullName>
    <formula>IF(
ISBLANK(Time__c),
&quot;&quot;,
IF(
MOD(HOUR(Time__c), 12) = 0,
&quot;12&quot;,
TEXT(MOD(HOUR(Time__c), 12))
) &amp;
&quot;:&quot; &amp;
IF(
MINUTE(Time__c) &lt; 10,
&quot;0&quot; &amp; TEXT(MINUTE(Time__c)),
TEXT(MINUTE(Time__c))
) &amp;
IF(
HOUR(Time__c) &lt; 12,
&quot; AM&quot;,
&quot; PM&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TimeFormula</label>
    <type>Text</type>
</CustomField>