force-app/main/default/objects/Worksheet__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>Computation_of_Meal_Allowance__c + Computation_of_Meal_Allowance2__c + Computation_of_Meal_Allowance3__c +  Computation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>