force-app/main/default/objects/Worksheet__c/fields/Total_A__c.field-meta.xml
<CustomField>
    <fullName>Total_A__c</fullName>
    <formula>Total_Line_2__c + TotalA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>