force-app/main/default/objects/Worksheet__c/fields/Total_B_CONUS__c.field-meta.xml
<CustomField>
    <fullName>Total_B_CONUS__c</fullName>
    <formula>Breakfast_Total_CONUS__c + Lunch_Total_CONUS__c  +  Dinner_Total_CONUS__c +  Total_Incidental_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>