force-app/main/default/objects/Worksheet__c/fields/Total_BWorksheetBOCONUS__c.field-meta.xml
<CustomField>
    <fullName>Total_BWorksheetBOCONUS__c</fullName>
    <formula>Computation_of_Meal_Allowance__c +  Computation_of_Meal_Allowance2__c +  Computation_of_Meal_Allowance3__c +  Computation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>