force-app/main/default/objects/Worksheet__c/fields/Total_C__c.field-meta.xml
<CustomField>
    <fullName>Total_C__c</fullName>
    <formula>Computation_to_DEDUCT__c +  Computation_to_DEDUCT2__c +  Computation_to_DEDUCT3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>