force-app/main/default/objects/Worksheet__c/fields/Total_C_CONUS__c.field-meta.xml
<CustomField>
    <fullName>Total_C_CONUS__c</fullName>
    <formula>Breakfast_Total_CONUS_2__c +  Lunch_Total_CONUS_2__c +  Dinner_Total_CONUS_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>