force-app/main/default/objects/Worksheet__c/fields/Total_D_OCONUS__c.field-meta.xml
<CustomField>
    <fullName>Total_D_OCONUS__c</fullName>
    <formula>Same_Day_Amount__c *  Days8__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total D</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>