force-app/main/default/objects/Worksheet__c/fields/Total_Days2__c.field-meta.xml
<CustomField>
    <fullName>Total_Days2__c</fullName>
    <formula>IF(
    ISBLANK(TEXT(Departure_DayPicklist2__c)),
    Departure_Day2__c,
    VALUE(TEXT(Departure_DayPicklist2__c))
)
+
Full_Days2__c
+
IF(
    ISBLANK(TEXT(Return_DayPicklist2__c)),
    Return_Day2__c,
    VALUE(TEXT(Return_DayPicklist2__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>