force-app/main/default/objects/Worksheet__c/fields/Total_Federal_Max_Lodging2__c.field-meta.xml
<CustomField>
    <fullName>Total_Federal_Max_Lodging2__c</fullName>
    <formula>NumberOfNights2__c * Federal_Max_Lodging_Per_Night1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Federal Max Lodging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>