force-app/main/default/objects/Worksheet__c/fields/Total_Federal_Max_Lodging3__c.field-meta.xml
<CustomField>
    <fullName>Total_Federal_Max_Lodging3__c</fullName>
    <formula>NumberOfNights3__c *  Federal_Max_Lodging_Per_Night3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Federal Max Lodging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>