force-app/main/default/objects/Worksheet__c/fields/Total_Federal_Max_Lodging__c.field-meta.xml
<CustomField>
    <fullName>Total_Federal_Max_Lodging__c</fullName>
    <formula>Number_of_Nights__c  *  Federal_Max_Lodging_Per_Night__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Federal Max Lodging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>