force-app/main/default/objects/Worksheet__c/fields/Total_Hotel_Rate3__c.field-meta.xml
<CustomField>
    <fullName>Total_Hotel_Rate3__c</fullName>
    <formula>Number_of_Nights__c  * HotelRate3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hotel Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>