force-app/main/default/objects/Worksheet__c/fields/Total_Incidental_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Incidental_Expenses__c</fullName>
    <formula>Incidental_Expenses_Daily_Rate__c *  Incidental_Expenses_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Incidental Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>