force-app/main/default/objects/Worksheet__c/fields/Total_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_2__c</fullName>
    <formula>Total_Days2__c  *  RateCurrency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Line 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>