force-app/main/default/objects/Worksheet__c/fields/Total_Rental_Car_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Rental_Car_Cost__c</fullName>
    <formula>CASE(
    SelectedQuote__c,

    &quot;Itinerary 1&quot;, TotalCost__c,
    &quot;Quote 1&quot;, TotalCost__c,

    &quot;Itinerary 2&quot;, TotalCost2__c,
    &quot;Quote 2&quot;, TotalCost2__c,

    &quot;Itinerary 3&quot;, TotalCost3__c,
    &quot;Quote 3&quot;, TotalCost3__c,

    TotalCost3__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rental Car Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>