force-app/main/default/objects/Worksheet__c/fields/Total_Worksheet_D_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Worksheet_D_Cost__c</fullName>
    <formula>Total_Rental_Car_Cost__c +  TotalEstimatedCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Worksheet D Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>