force-app/main/default/objects/Worksheet__c/fields/TotalA__c.field-meta.xml
<CustomField>
    <fullName>TotalA__c</fullName>
    <description>PacPoint-AC121019 - Created for DCCA Travel Approval phase 1</description>
    <formula>TotalDays__c *  Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Line 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>