force-app/main/default/objects/Worksheet__c/fields/TotalB__c.field-meta.xml
<CustomField>
    <fullName>TotalB__c</fullName>
    <description>PacPoint-AC121019 - Created for DCCA Travel Approval phase 1</description>
    <formula>ComputationOfMealAllowance__c  * 20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>