force-app/main/default/objects/Worksheet__c/fields/TotalC__c.field-meta.xml
<CustomField>
    <fullName>TotalC__c</fullName>
    <description>PacPoint-AC121219 - Created for DCCA Travel Approval phase 1</description>
    <formula>BreakfastTotalC__c   +  LunchTotalC__c + DinnerTotalC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>