force-app/main/default/objects/Worksheet__c/fields/TotalCost__c.field-meta.xml
<CustomField>
    <fullName>TotalCost__c</fullName>
    <description>PacPoint-AC120919 - Created for DCCA Travel Approval phase 1</description>
    <formula>IF(
    RecordType.Name = &quot;Worksheet D (Intra-State - Ground Transportation)&quot;,
    CarRate__c * Rental_Period_Qty__c,
    IF(
        RecordType.Name = &quot;Worksheet D (Out-of-State - Ground Transportation)&quot;,
        CarRate__c * Number_of_Days__c,
        0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>