force-app/main/default/objects/Worksheet__c/fields/TotalD__c.field-meta.xml
<CustomField>
    <fullName>TotalD__c</fullName>
    <description>PacPoint-AC121219 - Created for DCCA Travel Approval phase 1</description>
    <formula>BreakfastTotalD__c   +  LunchTotalD__c + DinnerTotalD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total D</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>