force-app/main/default/objects/Worksheet__c/fields/TotalDays__c.field-meta.xml
<CustomField>
    <fullName>TotalDays__c</fullName>
    <description>PacPoint-AC121019 - Created for DCCA Travel Approval phase 1</description>
    <formula>IF(
    ISBLANK(TEXT(Departure_DayPicklist__c)),
    DepartureDay__c,
    VALUE(TEXT(Departure_DayPicklist__c))
)
+
FullDays__c
+
IF(
    ISBLANK(TEXT(Return_DayPicklist__c)),
    ReturnDay__c,
    VALUE(TEXT(Return_DayPicklist__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>