force-app/main/default/objects/Worksheet__c/fields/TotalDFormula__c.field-meta.xml
<CustomField>
    <fullName>TotalDFormula__c</fullName>
    <formula>&quot;(&quot; + TEXT(ABS( TotalD__c)) + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total D Formula</label>
    <type>Text</type>
</CustomField>