force-app/main/default/objects/Worksheet__c/fields/TotalEstimatedCost__c.field-meta.xml
<CustomField>
    <fullName>TotalEstimatedCost__c</fullName>
    <description>PacPoint-AC120919 - Created for DCCA Travel Approval phase 1</description>
    <formula>TaxiCost__c  +  AirportHotelShuttleCost__c  +  ParkingCost__c  +  OtherCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost for Other Ground Transportati</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>