force-app/main/default/objects/Worksheet__c/fields/TotalExcessLodging2__c.field-meta.xml
<CustomField>
    <fullName>TotalExcessLodging2__c</fullName>
    <description>PacPoint-AC121019 - Created for DCCA Travel Approval phase 1</description>
    <formula>IF(
    RecordType.Name = &quot;Worksheet C - Hotel Accommodations&quot;,
    ExcessLodging2__c * NumberOfNights2__c,
    IF(
        RecordType.Name = &quot;Worksheet C-Lodging Expenses&quot;,
        MAX(0, Total_Hotel_Rate2__c - Total_Federal_Max_Lodging__c),
        NULL
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Excess Lodging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>