force-app/main/default/objects/Worksheet__c/fields/Travel_Approval__c.field-meta.xml
<CustomField>
    <fullName>Travel_Approval__c</fullName>
    <description>PacPoint-AC120919 - Created for DCCA Travel Approval phase 1</description>
    <label>Travel Approval</label>
    <referenceTo>TravelApproval__c</referenceTo>
    <relationshipLabel>Worksheets</relationshipLabel>
    <relationshipName>Worksheets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>