force-app/main/default/objects/Worksheet__c/fields/Travel_City__c.field-meta.xml
<CustomField>
    <fullName>Travel_City__c</fullName>
    <label>Travel City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>