force-app/main/default/objects/Worksheet__c/fields/Travel_State__c.field-meta.xml
<CustomField>
    <fullName>Travel_State__c</fullName>
    <label>Travel State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>