force-app/main/default/objects/Worksheet__c/fields/TravelApprovalFolder__c.field-meta.xml
<CustomField>
    <fullName>TravelApprovalFolder__c</fullName>
    <description>Pacificpoint AZ20200909 00009155</description>
    <formula>&quot;Travel Approval - &quot;+Travel_Approval__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Approval Folder</label>
    <type>Text</type>
</CustomField>