force-app/main/default/objects/Worksheet__c/fields/Traveler__c.field-meta.xml
<CustomField>
    <fullName>Traveler__c</fullName>
    <description>PacPoint-AC120919 - Created for DCCA Travel Approval phase 1</description>
    <formula>Travel_Approval__r.TravelerName__c</formula>
    <label>Traveler</label>
    <type>Text</type>
</CustomField>