force-app/main/default/objects/Worksheet__c/fields/TravelType__c.field-meta.xml
<CustomField>
    <fullName>TravelType__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Travel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intra-State (Overnight)</fullName>
            </value>
            <value>
                <fullName>Intra-State (Same Day)</fullName>
            </value>
            <value>
                <fullName>Out-of-State</fullName>
            </value>
            <value>
                <fullName>Intra-State</fullName>
            </value>
            <value>
                <fullName>Hawaii, Alaska, &amp; Foreign Countries (OCONUS)</fullName>
            </value>
            <value>
                <fullName>48 Contiguous States &amp; District of Columbia (CONUS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>