force-app/main/default/objects/Worksheet__c/fields/Worksheet_A_Total_Number__c.field-meta.xml
<CustomField>
    <fullName>Worksheet_A_Total_Number__c</fullName>
    <label>Worksheet A Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>