force-app/main/default/objects/Worksheet__c/fields/WorksheetAmended__c.field-meta.xml
<CustomField>
    <fullName>WorksheetAmended__c</fullName>
    <description>PacPoint-AC102320 - DCCA Travel Approval</description>
    <formula>IF(  Amended__c  = true , &quot;Amended&quot;, &quot; &quot;)</formula>
    <label>Worksheet Amended</label>
    <type>Text</type>
</CustomField>