force-app/main/default/objects/Worksheet__c/fields/WorksheetDQuote2__c.field-meta.xml
<CustomField>
    <fullName>WorksheetDQuote2__c</fullName>
    <formula>IF(TEXT(SelectedQuote__c) = &quot;Quote 2&quot;, 
&quot;x&quot;, 
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worksheet D - Quote 2</label>
    <type>Text</type>
</CustomField>